# gaspatchio

./: .gitattributes  .gitignore  .mailmap  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  PRIVACY.md  README.md  REUSE.toml  SECURITY.md  cargo.toml  index.html  osv-scanner.toml  pyproject.toml  readme.md  rust.html  tutorial
bindings/python/: AGENTS.md  CLAUDE.md  Cargo.toml  POLARS_SCALAR_TO_LIST_BROADCASTING.md  README.md  RESEARCH_SUMMARY.md  actuarial_api_research.md  conftest.py  list_broadcasting_findings.md  list_broadcasting_solution.py  mypy-stubtest.ini  project.md  projection_accessor_example.py  pyproject.toml  research_list_broadcasting.py  scalar_to_list_research.py  stubtest-allowlist.txt  test_polars_api.py  test_polars_api_detailed.py
bindings/python/.claude/: settings.json
bindings/python/.claude/docs/: typing.md
bindings/python/benchmarks/scenariorun/: _runner.py  test_scenariorun_scaling.py
bindings/python/docs/: cli-docs-command.md  cli-knowledge-command.md
bindings/python/docs/plans/: 2025-11-10-period-time-shifting-api.md  2025-11-11-task5-list-broadcasting-tracing.md  GSP-12-boolean-coercion-for-mask-patterns.md  task-5.6-integration-test-results.md
bindings/python/examples/: rollforward_smoke.py
bindings/python/gaspatchio_core/: __init__.py  __init__.pyi  _identity.py  _internal.py  _internal.pyi  assumptions.py  cli.py  dates.py  functions.py  registry.py  runner.py  telemetry.py  tutorial_cli.py  typing.py
bindings/python/gaspatchio_core/accessors/: __init__.py  __init__.pyi  base.py  base.pyi  date.py  date.pyi  excel.py  excel.pyi  finance.py  finance.pyi  projection.py  projection.pyi  projection_frame.py  projection_frame.pyi
bindings/python/gaspatchio_core/api/: __init__.py  client.py  models.py
bindings/python/gaspatchio_core/assumptions/: __init__.py  __init__.pyi  _analysis.py  _api.py  _builder.py  _config.py  _dimensions.py  _loader.py  _overflow.py  _source.py  _strategies.py  _transform.py  _utils.py  _validation.py  api.py
bindings/python/gaspatchio_core/column/: __init__.py  __init__.pyi  _dispatch_autopatch.py  _dispatch_common.py  _dispatch_execution.py  _dispatch_namespaces.py  column_proxy.py  column_proxy.pyi  condition_expression.py  dispatch.py  dispatch.pyi  expression_proxy.py  expression_proxy.pyi  proxy.py  proxy.pyi  shape.py
bindings/python/gaspatchio_core/curves/: __init__.py  __init__.pyi  _bootstrap.py  _curve.py  _interpolation.py  _shift.py  _smith_wilson.py  _svensson.py
bindings/python/gaspatchio_core/dsl/: __init__.py  _delegation.py  core.py  core.pyi  plugins.py
bindings/python/gaspatchio_core/errors/: __init__.py  __init__.pyi  boundary.py  compilation_finder.py  constants.py  exception_utils.py  formatter.py  formatting_errors.py  formatting_errors.pyi  frame_utils.py  metadata.py  models.py  suggestions.py  validation.py
bindings/python/gaspatchio_core/examples/: __init__.py
bindings/python/gaspatchio_core/frame/: __init__.py  __init__.pyi  base.py  base.pyi  execution.py  execution.pyi  registry.py  registry.pyi  tracing.py  tracing.pyi
bindings/python/gaspatchio_core/functions/: __init__.py  __init__.pyi  conditional.py  conditional.pyi  excel.py  utils.py  vector.py  vector.pyi
bindings/python/gaspatchio_core/mortality/: __init__.py  __init__.pyi  _conventions.py  _mortality_table.py
bindings/python/gaspatchio_core/polars_backend/: __init__.py  __init__.pyi  _shared.py  list_eval.py  masks.py  operators.py  plugins.py
bindings/python/gaspatchio_core/rollforward/: __init__.py  _action_key.py  _builder.py  _canonical.py  _collector.py  _compile.py  _compiled.py  _engine_binding.py  _explain.py  _fingerprint.py  _ir.py  _ops.py  _passes.py  _refs.py  _registry.py  _step.py
bindings/python/gaspatchio_core/scenarios/: __init__.py  __init__.pyi  _aggregated.py  _aggregators.py  _audit.py  _auto_batch.py  _batching.py  _config.py  _describe.py  _for_each.py  _memory.py  _metric.py  _period_aggregators.py  _period_sketch.py  _result.py  _run.py  _search.py  _sensitivity.py  _sketch.py  _spill.py  _stack.py  (+3 more)
bindings/python/notebooks/: analyse_results.py
bindings/python/recipes/: add-function.md
bindings/python/scripts/: __init__.py  alter_data.py  convert_csv_to_pq.py  dump_docs.py  generate_data.py  run_model.py
bindings/python/src/: assumptions.rs  lib.rs  table_registry.rs  vector.rs
bindings/python/tests/: conftest.py  test_af_attribute_access_runtime.py  test_assumptions.py  test_cli_docs.py  test_cli_help.py  test_cli_knowledge.py  test_cli_run_model.py  test_column_attribute_access.py  test_core.py  test_core_delegation.py  test_dates.py  test_dead_code_removed.py  test_editor_typing_pyright.py  test_identity.py  test_runner.py  test_stub_sync.py  test_telemetry.py
core/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  project.md
core/.cargo/: config.toml
core/benches/: accumulate.rs  assumption_table_lookup_benchmark.rs  curve_eval.rs  index_lookups_benchmark.rs  list_conditional.rs  list_pow.rs  perf_results.md  realistic_vector_lookup.rs  vector_plugin_benchmark.rs
core/benches/fixtures/: age-last-smoking-1k.parquet  age-last-smoking.parquet  expenses.csv  interest-rate.csv  lapse.csv  model-points.csv  mortality_scalars.parquet  mortality_select.parquet  premium-rate.csv  surrender_charges.parquet
core/ref/02-lookup-refactor/: 02-vector-support.md
core/src/: index.rs  lib.rs  plugin.rs  registry.rs  transform.rs
core/src/assumptions/: array_storage.rs  hash_storage.rs  key_encoder.rs  mod.rs  registry.rs  table.rs
core/src/excel/: YEARFRAC_EXCEL_COMPATIBILITY.md  accrint.rs  date_time.rs  datedif.rs  days360.rs  edate.rs  eomonth.rs  fv.rs  ipmt.rs  irr.rs  irr_tests.rs  mod.rs  nper.rs  npv.rs  pmt.rs  ppmt.rs  price.rs  pv.rs  pv_tests.rs  rate.rs  xirr.rs  xnpv.rs  yearfrac.rs  yearfrac_excel_verification.rs  yearfrac_tests.rs
core/src/polars_functions/: accumulate.rs  curve_eval.rs  excel.rs  list_clip.rs  list_conditional.rs  list_pow.rs  mod.rs  rollforward.rs  vector.rs
core/tests/: assumption_storage_integration.rs
(+1088 files in other folders)
