[package]
name = "gaspatchio_core_lib"
version = "0.0.2"
edition = "2021"

[lib]
name = "gaspatchio_core_lib"
# pure Rust library
crate-type = ["rlib"]


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
polars = { version = "0.46.0", features = [
    "lazy",
    "dtype-categorical",
    "dtype-struct",
    "dtype-datetime",
    "parquet",
    "strings",
] }
polars-arrow = "0.46.0"
log = "0.4.26"
env_logger = "0.11.1"
arc-swap = "1.6.0"
thiserror = "1.0"
once_cell = "1.17"
