[project]
name = "gaspatchio"
version = "0.2.0"
description = "Simple, fast and best served cold"
readme = "README.md"
authors = [{ name = "mrmattwright", email = "matt@opioinc.com" }]
requires-python = ">=3.12"
dependencies = [
    "logfire>=3.4.0",
    "loguru>=0.7.3",
    "numpy>=1.24.0,<2.2",
    "polars==1.27.1",
    "polars-u64-idx==1.27.1",
    "rich>=13.9.4",
    "typer>=0.15.1",
    "pyarrow>=15.0.0",
    "pytest>=8.3.4",
    "boto3>=1.37.2",
    "thefuzz[speedup]>=0.22.1",
    "python-dateutil>=2.9.0.post0",
    "ruff>=0.11.10",
    "markdown-it-py>=3.0.0",
    "docstring-parser>=0.16",
    "fastexcel>=0.14.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.1.0",
    "ty>=0.0.2",
    "vl-convert-python>=1.9.0.post1",
]

[dependency-groups]
dev = [
    "ai-code-tracker>=0.1.1",
    "hypothesis>=6.131.15",
    "memray>=1.19.1",
    "mypy>=1.15.0",
    "openpyxl>=3.1.0",
    "pydantic-ai>=0.2.16",
    "pydantic-evals>=0.2.16",
    "pyright>=1.1.400",
    "pytest-accept>=0.1.12",
    "pytest-benchmark>=5.1.0",
    "pytest-memray>=1.8.0",
    "xlsxwriter>=3.2.9",
]

[project.optional-dependencies]
pandas = ["polars-u64-idx==1.27.1"]
numpy = ["polars-u64-idx==1.27.1"]
pyarrow = ["polars-u64-idx==1.27.1"]
excel = ["polars-u64-idx==1.27.1"]
recipes = ["marimo>=0.10.0"]

# Build System
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "gaspatchio_core._internal"
python-packages = ["gaspatchio_core"]
python-source = ""

# Linting, formatting, type checking
[tool.ruff] 
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "D203",
    "D212",   # allow either one-line or two-line docstring summaries
    "D213",   # allow either one-line or two-line docstring summaries
    "ANN001", # sometimes self/cls isn't annotated
    "COM812", # conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # asserts are ok in tests
    "ANN201",  # test functions don't need return type annotations
    "PLR2004", # magic values are ok in tests
]

[tool.ruff.lint.isort]
known-first-party = ["gaspatchio_core"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
docstring-code-format = true # format code in docstrings too

[tool.mypy]
python_version = "3.12"
strict = true     # Enables the full strict bundle  :contentReference[oaicite:2]{index=2}
ignore_missing_imports = true  # relax only where stubs are unavailable
plugins = []

# Package management
[tool.uv]
# Rebuild package when any rust files change
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/*.rs" },
]
config-settings = { "build-args" = "--profile=dev" }

# Testing
[tool.pytest.ini_options]
addopts = [
    "--gp-docstring-paths=gaspatchio_core/column/namespaces/dt_proxy.py",
    "--gp-docstring-paths=gaspatchio_core/column/namespaces/string_proxy.py",
    "--gp-docstring-paths=gaspatchio_core/accessors/date.py",
    "--gp-docstring-paths=gaspatchio_core/accessors/excel.py",
    "--gp-docstring-paths=gaspatchio_core/accessors/finance.py",
    "--gp-docstring-paths=gaspatchio_core/accessors/projection.py",
    "--gp-docstring-paths=gaspatchio_core/column/proxy.pyi",
    "--gp-docstring-paths=gaspatchio_core/assumptions/_api.py",
    "--gp-docstring-paths=gaspatchio_core/accessors/excel_functions/*.py",
    "-p",
    "gaspatchio_core.examples.docstrings.pytest_plugin",
    "-m",
    "not benchmark",
    "--ignore=pyfuncs-outputs",
]
markers = [
    "benchmark: marks tests as performance benchmarks (deselect with '-m \"not benchmark\"')",
    "slow: marks tests that call LLM APIs (deselect with '-m not slow')",
    "performance: marks tests as performance related",
]

# Scripts / CLI paths
[project.scripts]
gp-docstrings = "gaspatchio_core.examples.docstrings.cli:app"
gspio = "gaspatchio_core.cli:app"
