[project]
name = "gaspatchio"
version = "0.5.1"
description = "Simple, fast and best served cold"
readme = "README.md"
authors = [{ name = "mrmattwright", email = "matt@opioinc.com" }]
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "logfire>=3.4.0",
    "loguru>=0.7.3",
    "numpy>=1.24.0,<2.2",
    "platformdirs>=4.0",
    "psutil>=5.9",
    "pydantic>=2.0.0",
    "polars==1.38.1",
    "polars[rt64]==1.38.1",
    "rich>=13.9.4",
    "typer>=0.15.1",
    "pyarrow>=15.0.0",
    "thefuzz[speedup]>=0.22.1",
    "python-dateutil>=2.9.0.post0",
    "holidays>=0.50",
    "markdown-it-py>=3.0.0",
    "docstring-parser>=0.16",
    "fastexcel>=0.14.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.1.0",
    "vl-convert-python>=1.9.0.post1",
    "altair>=6.1.0",
    "ddsketch>=3.0.1",
]

[project.urls]
Homepage = "https://gaspatchio.dev/"
Documentation = "https://gaspatchio.dev/"
Repository = "https://github.com/gaspatchio/gaspatchio"
Issues = "https://github.com/gaspatchio/gaspatchio/issues"

[dependency-groups]
dev = [
    "ai-code-tracker>=0.1.1",
    "hypothesis>=6.131.15",
    "memray>=1.19.1",
    "mypy>=1.15.0",
    "openpyxl>=3.1.0",
    "pyright>=1.1.400",
    "pytest>=8.3.4",
    "pytest-accept>=0.1.12",
    "pytest-benchmark>=5.1.0",
    "psutil>=5.9.0",
    "pytest-memray>=1.8.0",
    "ruff>=0.11.10",
    "ty>=0.0.2",
    "types-PyYAML>=6.0",
    "xlsxwriter>=3.2.9",
]
benchmark = [
    "lifelib>=0.11.0",
    "modelx>=0.28.1",
    # lifelib's IntegratedLife model imports pandas at runtime, but neither
    # lifelib nor modelx declares it — so it must be listed here, else the
    # comparison benchmark fails under `uv sync --no-dev` (fresh CI resolve).
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "psutil>=5.9.0",
]
evals = [
    "pydantic-ai>=0.2.16",
    "pyyaml>=6",
]

[project.optional-dependencies]
pandas = ["polars[rt64]==1.38.1"]
numpy = ["polars[rt64]==1.38.1"]
pyarrow = ["polars[rt64]==1.38.1"]
excel = ["polars[rt64]==1.38.1"]
recipes = ["marimo>=0.10.0"]

# Build System
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "gaspatchio_core._internal"
python-packages = ["gaspatchio_core"]
python-source = ""

# Linting, formatting, type checking
[tool.ruff] 
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "D203",
    "D212",   # allow either one-line or two-line docstring summaries
    "D213",   # allow either one-line or two-line docstring summaries
    "ANN001", # sometimes self/cls isn't annotated
    "COM812", # conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # asserts are ok in tests
    "ANN201",  # test functions don't need return type annotations
    "PLR2004", # magic values are ok in tests
]
"tests/rollforward/**/*.py" = [
    "S101",    # asserts are ok in tests
    "ANN201",  # test functions don't need return type annotations
    "PLR2004", # magic values are ok in tests
    "PD901",   # `df` is the natural variable name for DataFrame fixtures in tests
    "D101",    # test classes are descriptive by name
    "D102",    # test methods are descriptive by name
    "D103",    # test helper functions are descriptive by name
    "D104",    # tests/rollforward/__init__.py intentionally empty
    "B017",    # pytest.raises(Exception) is fine for "any exception" frozen-dataclass tests
    "PT011",   # ValueError matches are tested via match= where it matters; broad use is intentional in fixture-style helpers
    "SLF001",  # tests assert on _internal attrs of frozen dataclasses by design
]
"gaspatchio_core/rollforward/**/*.py" = [
    "SLF001",  # _StateHandle is a friend class that mutates RollforwardBuilder._transitions etc. by design
]
"benchmarks/**/*.py" = [
    "INP001",  # benchmarks are standalone scripts, not part of a namespace package
    "S101",    # asserts are ok in benchmark tests
    "ANN201",  # benchmark functions don't need return type annotations
    "PLR2004", # magic values are ok in benchmark thresholds
    "E501",    # line length relaxed for benchmark docstrings
]
"examples/**/*.py" = [
    "INP001",  # examples are standalone demo scripts
    "T201",    # print() expected in demo output
    "S101",    # asserts intentional in smoke scripts
    "PLR2004", # magic tolerances acceptable in demos
    "D301",    # backslash-as-line-continuation in module docstrings is fine
    "D103",    # function docstrings optional for tiny demos
]
"gaspatchio_core/tutorials/**/*.py" = [
    "INP001",  # tutorials are standalone scripts, not part of a namespace package
    "T201",    # print() is expected in tutorial output
    "S101",    # asserts OK in tutorial code
    "ANN201",  # tutorial functions don't need return annotations
    "PLR2004", # magic values OK in tutorials
    "D100",    # module docstrings optional for tutorial steps
    "D103",    # function docstrings optional for tutorial steps
    "D401",    # imperative mood not enforced in tutorial docstrings
    "D417",    # missing argument docs acceptable for complex tutorials
    "D400",    # first line docstring punctuation not enforced in tutorials
    "D413",    # docstring section formatting relaxed for tutorials
    "D415",    # first line docstring punctuation not enforced in tutorials
    "E501",    # line length relaxed for tutorials
    "E402",    # module level imports allowed after path setup in tutorials
    "E741",    # ambiguous variable names acceptable in some tutorial contexts
    "W291",    # trailing whitespace acceptable in tutorial code
    "I001",    # import sorting not critical for tutorial code
    "ERA001",  # commented code acceptable in tutorial steps
    "RET504",  # unnecessary assignment acceptable in tutorial refactoring
    "RUF003",  # unicode dashes acceptable in tutorial comments
    "RUF002",  # unicode ambiguity acceptable in tutorial docstrings
    "RUF001",  # unicode ambiguity in strings acceptable in tutorials
    "RUF100",  # noqa directives for E402 acceptable when imports follow path setup
    "PERF401", # list comprehensions not required in tutorial demos
    "PERF402", # list append acceptable in tutorial code
    "PLR0912", # branch complexity acceptable in tutorial code
    "PLR0913", # function arguments acceptable in tutorial code
    "PLR0915", # statement count acceptable in tutorial code
    "PYI041",  # type simplification not critical for tutorials
    "PLC0415", # import at top-level relaxed in tutorial scripts
    "N806",    # variable case not enforced for constants in tutorial code
    "C901",    # cyclomatic complexity not critical for tutorials
    "B007",    # unused loop variables acceptable in tutorial code
    "F841",    # unused variables acceptable in tutorial code
    "EXE001",  # shebang not required for executable in tutorials
]

[tool.ruff.lint.isort]
known-first-party = ["gaspatchio_core"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
docstring-code-format = true # format code in docstrings too

[tool.mypy]
python_version = "3.12"
strict = true     # Enables the full strict bundle  :contentReference[oaicite:2]{index=2}
ignore_missing_imports = true  # relax only where stubs are unavailable
plugins = []

# Package management
[tool.uv]
# Rebuild package when any rust files change
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/*.rs" },
]
config-settings = { "build-args" = "--profile=dev" }

# Testing
[tool.pytest.ini_options]
addopts = [
    "--gp-docstring-paths=gaspatchio_core/column/namespaces/dt_proxy.py",
    "--gp-docstring-paths=gaspatchio_core/column/namespaces/string_proxy.py",
    "--gp-docstring-paths=gaspatchio_core/accessors/date.py",
    "--gp-docstring-paths=gaspatchio_core/accessors/excel.py",
    "--gp-docstring-paths=gaspatchio_core/accessors/finance.py",
    "--gp-docstring-paths=gaspatchio_core/accessors/projection.py",
    "--gp-docstring-paths=gaspatchio_core/column/proxy.pyi",
    "--gp-docstring-paths=gaspatchio_core/assumptions/_api.py",
    "--gp-docstring-paths=gaspatchio_core/accessors/excel_functions/*.py",
    "-p",
    "gaspatchio_core.examples.docstrings.pytest_plugin",
    "-m",
    "not benchmark",
    "--ignore=pyfuncs-outputs",
]
markers = [
    "benchmark: marks tests as performance benchmarks (deselect with '-m \"not benchmark\"')",
    "slow: marks tests that call LLM APIs (deselect with '-m not slow')",
    "performance: marks tests as performance related",
]

# Scripts / CLI paths
[project.scripts]
gp-docstrings = "gaspatchio_core.examples.docstrings.cli:app"
gspio = "gaspatchio_core.cli:app"
